# dgp2019_exercise6

./: CMakeLists.txt
smoothing/: CMakeLists.txt  mesh_processing.cpp  mesh_processing.h  smoothing_test.cpp  viewer.cpp
